72. Fix Jdbc dao implementation